PyMaker/datas/object2/RawHTML/i15001/Python_DOC_referPages.importing-beautiful-soup-in-python3.txt
<div class="post-text" itemprop="text">
<p>I am trying to import beautifulsoup in python3. I have this line:</p>
<pre><code>from bs4 import BeautifulSoup
</code></pre>
<p>It says:</p>
<pre><code>from bs4 import BeautifulSoup
File "/usr/local/lib/python2.7/dist-packages/bs4/__init__.py", line 175
except Exception, e:
                ^
SyntaxError: invalid syntax
</code></pre>
<p>I see that it is still trying to use python2.7 package. I have installed beautifulsoup for python3 using pip3 and on checking I found that the package is there in /usr/lib/python3/dist-packages/.<br/>
Also on checking sys.path, I found that this path is present. Still I don't get why it is trying to use the older package,</p>
</div>
<div class="post-text" itemprop="text">
<p>If <code>python3</code> executable has <code>python2.7</code> in <code>sys.path</code> then it means that the Python 3 installation is broken.</p>
<p>Here's <a href="https://docs.python.org/3/library/sys.html#sys.path" rel="nofollow"><code>sys.path</code></a> on my machine:</p>
<pre><code>['',
 '/usr/lib/python3.4',
 '/usr/lib/python3.4/plat-x86_64-linux-gnu',
 '/usr/lib/python3.4/lib-dynload',
 '/home/me/.local/lib/python3.4/site-packages',
 '/usr/local/lib/python3.4/dist-packages',
 '/usr/lib/python3/dist-packages']
</code></pre>
<p>Note: no <code>python2.7</code> directories.</p>
<p>Make sure <code>PYTHONPATH</code> is not set, and there are no stray <code>.pth</code> files in the default list (installation-dependent, above) of Python 3.4 directories that mention python2.7 directories, and <a href="https://docs.python.org/3/using/cmdline.html#envvar-PYTHONSTARTUP" rel="nofollow"><code>PYTHONSTARTUP</code> file</a> or <code>sitecustomize</code>, <code>usercustomize</code> modules do not corrupt <code>sys.path</code>.</p>
</div>
<div class="post-text" itemprop="text">
<p>Perhaps using virtualenv can temporarily solve your problem.
Or maybe try <code>pip uninstall beautifulsoup4</code>
That way you're only left with the version pip3 installed.</p>
</div>
<span class="comment-copy">Presumably in <code>sys.path</code> the old 2.7 path is there before the new py4 one -- quite a problem!  Maybe a bad <code>PYTHONPATH</code> in your OS's environment?  Please show us your <code>sys.path</code> and that env var to help us help you.  <code>pip3 install beautifulsoup4</code> fixed everything for me, but then, I don't have such "path cross-contamination", thanks be...!-)</span>
<span class="comment-copy">Yeah. The old 2.7 path is there as pointed out by you.</span>
